--- a/Lab3/roscourse_ws/install/python_turtle/share/python_turtle/package.xml
+++ b/Lab3/roscourse_ws/install/python_turtle/share/python_turtle/package.xml
@@ -14,6 +14,7 @@
 
   <depend>rclpy</depend>
   <depend>turtle_interfaces</depend>
+  <depend>rcl_interfaces</depend>
 
   <export>
     <build_type>ament_python</build_type>
