--- a/project_ws/src/draw_shape_interfaces/CMakeLists.txt
+++ b/project_ws/src/draw_shape_interfaces/CMakeLists.txt
@@ -32,4 +32,6 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+find_package(rosidl_default_generators REQUIRED)
+rosidl_generate_interfaces(${PROJECT_NAME} "msg/ShapeDef.msg")
 ament_package()
