--- a/project_ws/src/draw_shape_interfaces/CMakeLists.txt
+++ b/project_ws/src/draw_shape_interfaces/CMakeLists.txt
@@ -32,6 +32,10 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
-rosidl_generate_interfaces(${PROJECT_NAME} "msg/ShapeDef.msg")
+rosidl_generate_interfaces(${PROJECT_NAME} 
+  "msg/ShapeDef.msg"
+  "srv/GoToPoint.srv"
+  DEPENDENCIES geometry_msgs)
 ament_package()
